--- a/org.css
+++ b/org.css
@@ -1,1 +1,109 @@
-h1 { color: red; }
+/*
+
+This file contains style to be included in the <head> of all HTML
+files exported by org-mode.  The default style can be found in the
+constant org-html-style-default.  The following selectors are made
+available by org-mode:
+
+p.author            author information, including email
+p.date              publishing date
+p.creator           creator info, about org mode version
+.title              document title
+.todo               TODO keywords, all not-done states
+.done               the DONE keywords, all states that count as done
+.WAITING            each TODO keyword also uses a class named after itself
+.timestamp          timestamp
+.timestamp-kwd      keyword associated with a timestamp, like SCHEDULED
+.timestamp-wrapper  span around keyword plus timestamp
+.tag                tag in a headline
+._HOME              each tag uses itself as a class, "@" replaced by "_"
+.target             target for links
+.linenr             the line number in a code example
+.code-highlighted   for highlighting referenced code lines
+div.outline-N       div for outline level N (headline plus text))
+div.outline-text-N  extra div for text at outline level N
+.section-number-N   section number in headlines, different for each level
+div.figure          how to format an inlined image
+pre.src             formatted source code
+pre.example         normal example
+p.verse             verse paragraph
+div.footnotes       footnote section headline
+p.footnote          footnote definition paragraph, containing a footnote
+.footref            a footnote reference number (always a <sup>)
+.footnum            footnote number in footnote definition (always <sup>)
+*/
+
+.title  { text-align: center; }
+.todo   { font-family: monospace; color: red; }
+.done   { color: green; }
+.tag    { background-color: #eee; font-family: monospace;
+          padding: 2px; font-size: 80%; font-weight: normal; }
+.timestamp { color: #bebebe; }
+.timestamp-kwd { color: #5f9ea0; }
+.right  { margin-left: auto; margin-right: 0px;  text-align: right; }
+.left   { margin-left: 0px;  margin-right: auto; text-align: left; }
+.center { margin-left: auto; margin-right: auto; text-align: center; }
+.underline { text-decoration: underline; }
+#postamble p, #preamble p { font-size: 90%; margin: .2em; }
+p.verse { margin-left: 3%; }
+pre {
+    border: 1px solid #ccc;
+    box-shadow: 3px 3px 3px #eee;
+    padding: 8pt;
+    font-family: monospace;
+    overflow: auto;
+    margin: 1.2em;
+}
+pre.src {
+    position: relative;
+    overflow: visible;
+    padding-top: 1.2em;
+}
+pre.src:before {
+    display: none;
+    position: absolute;
+    background-color: white;
+    top: -10px;
+    right: 10px;
+    padding: 3px;
+    border: 1px solid black;
+}
+pre.src:hover:before { display: inline;}
+pre.src-sh:before    { content: 'sh'; }
+pre.src-bash:before  { content: 'sh'; }
+pre.src-emacs-lisp:before { content: 'Emacs Lisp'; }
+pre.src-R:before     { content: 'R'; }
+pre.src-perl:before  { content: 'Perl'; }
+pre.src-java:before  { content: 'Java'; }
+pre.src-sql:before   { content: 'SQL'; }
+
+table { border-collapse:collapse; }
+td, th { vertical-align:top;  }
+th.right  { text-align: center;  }
+th.left   { text-align: center;   }
+th.center { text-align: center; }
+td.right  { text-align: right;  }
+td.left   { text-align: left;   }
+td.center { text-align: center; }
+dt { font-weight: bold; }
+.footpara:nth-child(2) { display: inline; }
+.footpara { display: block; }
+.footdef  { margin-bottom: 1em; }
+.figure { padding: 1em; }
+.figure p { text-align: center; }
+.inlinetask {
+    padding: 10px;
+    border: 2px solid gray;
+    margin: 10px;
+    background: #ffffcc;
+}
+#org-div-home-and-up
+{ text-align: right; font-size: 70%; white-space: nowrap; }
+textarea { overflow-x: auto; }
+.linenr { font-size: smaller }
+.code-highlighted { background-color: #ffff00; }
+.org-info-js_info-navigation { border-style: none; }
+#org-info-js_console-label
+{ font-size: 10px; font-weight: bold; white-space: nowrap; }
+.org-info-js_search-highlight
+{ background-color: #ffff00; color: #000000; font-weight: bold; }
