--- a/org.css
+++ b/org.css
@@ -64,10 +64,10 @@ p.footnote          footnote definition paragraph, containing a footnote
 #postamble p, #preamble p { font-size: 90%; margin: .2em; }
 p.verse { margin-left: 3%; }
 pre {
-    border: 1px solid #ccc;
-    box-shadow: 3px 3px 3px #eee;
+    page-break-inside: avoid;
     padding: 8pt;
-    font-family: monospace;
+    font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
+    font-size: 12px;
     overflow: auto;
     margin: 1.2em;
 }
@@ -77,15 +77,23 @@ pre.src {
     position: relative;
     overflow: visible;
     padding-top: 1.2em;
+    white-space: pre;
+    white-space: pre-wrap;
+}
+pre, pre.src:before {
+    border: 1px solid #999;
+    -webkit-border-radius: 2px;
+    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 pre.src:before {
     display: none;
+    color: #1d1f21;
+    background-color: #c5c8c6;
     position: absolute;
-    background-color: white;
     top: -10px;
     right: 10px;
     padding: 3px;
-    border: 1px solid black;
 }
 pre.src:hover:before { display: inline;}
 pre.src-sh:before    { content: 'sh'; }
