--- a/org.css
+++ b/org.css
@@ -75,6 +75,7 @@ h6 {
   font-size: 11.9px;
 }
 .title  { text-align: center; }
+.tag { float: right; }
 .todo, .done, .tag > span {
   display: inline-block;
   padding: 2px 4px;
