Style inline code blocks.

--- a/org.css
+++ b/org.css
@@ -144,6 +144,14 @@ ol.inline > li {
 .underline { text-decoration: underline; }
 #postamble p, #preamble p { font-size: 90%; margin: .2em; }
 p.verse { margin-left: 3%; }
+code {
+    padding: 2px 4px;
+    font-size: 90%;
+    color: #c7254e;
+    white-space: nowrap;
+    background-color: #f9f2f4;
+    border-radius: 4px;
+}
 pre {
     page-break-inside: avoid;
     padding: 8pt;
