--- a/org.css
+++ b/org.css
@@ -38,6 +38,25 @@ p.footnote          footnote definition paragraph, containing a footnote
 */
 
 body { padding: 0 2em; }
+a {
+  color: #0088cc;
+  text-decoration: none;
+}
+a:hover,
+a:focus {
+  color: #005580;
+  text-decoration: underline;
+}
+}
+a:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+a:hover,
+a:active {
+  outline: 0;
+}
 h1,
 h2,
 h3,
@@ -1275,14 +1294,4 @@ than body or by calling htmlize-buffer and desired style.
   color: #ff0000;
   background-color: #ff0000;
   font-weight: bold;
-}
-
-a {
-  color: inherit;
-  background-color: inherit;
-  font: inherit;
-  text-decoration: inherit;
-}
-a:hover {
-  text-decoration: underline;
 }
