--- a/org.css
+++ b/org.css
@@ -167,7 +167,7 @@ ol.inline > li {
   padding-left: 5px;
   padding-right: 5px;
 }
-.timestamp { color: #bebebe; }
+.timestamp-wrapper { font-size: 85%; }
 .timestamp-kwd { color: #5f9ea0; }
 .right  { margin-left: auto; margin-right: 0px;  text-align: right; }
 .left   { margin-left: 0px;  margin-right: auto; text-align: left; }
