--- a/org.css
+++ b/org.css
@@ -167,6 +167,17 @@ ol.inline > li {
   padding-left: 5px;
   padding-right: 5px;
 }
+blockquote {
+  padding: 0 0 0 15px;
+  margin: 0 0 20px;
+  border-left: 5px solid #eeeeee;
+}
+blockquote p {
+  margin-bottom: 0;
+  font-size: 17.5px;
+  font-weight: 300;
+  line-height: 1.25;
+}
 .timestamp-wrapper { font-size: 85%; }
 .timestamp-kwd { color: #5f9ea0; }
 .right  { margin-left: auto; margin-right: 0px;  text-align: right; }
