--- a/org.css
+++ b/org.css
@@ -107,7 +107,7 @@ h6 {
 }
 .title  { text-align: center; }
 .tag { float: right; }
-.todo, .done, .tag > span, .timestamp-kwd {
+.todo, .done, .tag > span, .timestamp-kwd, .timestamp {
   display: inline-block;
   padding: 2px 4px;
   font-size: 11.844px;
@@ -125,6 +125,12 @@ h6 {
 .todo   { background-color: #953b39; }
 .done   { background-color: #356635; }
 .timestamp-kwd { background-color: #5f9ea0; }
+.timestamp {
+    color: #333333;
+    background-color: #eeeeee;
+    font-weight: normal;
+    text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.25)
+}
 h1 .todo, h1 .done, h1 .tag > span,
 h2 .todo, h2 .done, h2 .tag > span,
 h3 .todo, h3 .done, h3 .tag > span,
