--- a/org.css
+++ b/org.css
@@ -129,7 +129,7 @@ h6 {
     color: #333333;
     background-color: #eeeeee;
     font-weight: normal;
-    text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.25)
+    text-shadow: 0 -1px 0 rgba(255, 255, 255, 0.25);
 }
 h1 .todo, h1 .done, h1 .tag > span,
 h2 .todo, h2 .done, h2 .tag > span,
