--- a/org.css
+++ b/org.css
@@ -272,6 +272,7 @@ textarea { overflow-x: auto; }
 { font-size: 10px; font-weight: bold; white-space: nowrap; }
 .org-info-js_search-highlight
 { background-color: #ffff00; color: #000000; font-weight: bold; }
+#table-of-contents, .outline-2 { margin: 4em 0; }
 
 /*
 
